WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220598
[macOS] "Correct Spelling Automatically" menu items are inconsistent when autocorrect="off"
https://bugs.webkit.org/show_bug.cgi?id=220598
Summary
[macOS] "Correct Spelling Automatically" menu items are inconsistent when aut...
Wenson Hsieh
Reported
2021-01-13 13:21:16 PST
<
rdar://problem/71713611
>
Attachments
Patch
(27.58 KB, patch)
2021-01-13 13:41 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-01-13 13:41:26 PST
Created
attachment 417558
[details]
Patch
EWS
Comment 2
2021-01-13 14:50:30 PST
Committed
r271459
: <
https://trac.webkit.org/changeset/271459
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 417558
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug